@@ -29,12 +29,9 @@ Component::~Component()
   }
 }
 //-----------------------------------------------------------------------------
-Element* Component::createElement(Element::Type type, 
-				  unsigned int q, unsigned int index,
-				  real t0, real t1)
+Element* Component::createElement(Element::Type type, unsigned int q,
+				  unsigned int index, real t0, real t1)
 {
-  cout << "type = " << type << endl;
-
   Element* element = 0;
 
   // Create element
